ingress-deployment/hello-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web1-service
  # namespace: dev
  labels:
    app: web1
spec:
  type: NodePort
  selector:
    app: web1
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: web1
---
apiVersion: v1
kind: Service
metadata:
  name: web2-service
  # namespace: dev
  labels:
    app: web2
spec:
  type: NodePort
  selector:
    app: web2
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: web2
