ingress-deployment/ingress.yml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  # namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - host: hello-world.info
   http:
      paths:
      - path: /*
        backend:
          serviceName: web1-service
          servicePort: 80
      - path: /v2/*
        backend:
          serviceName: web2-service
          servicePort: 8080
